Feature:Set up the doctor services and service implementation